@@ -14,8 +14,19 @@ import java.time.Instant;
 import java.util.*;
 
 /**
- * Heuristic fuzz tests for levels 1 and 2.
- * Focus: exercise domain/app logic, surface unexpected exceptions.
+ * Heuristic fuzz tests for Levels 1 and 2 of the game.
+ *
+ * Goals:
+ * - Exercise domain and application logic end-to-end via.
+ * - Surface unexpected exceptions and write reproduction issues when failures occur.
+ * - Keep execution bounded by time for predictable CI runs.
+ *
+ * Usage:
+ * - Global variable to control run duration (default 15s).
+ * - Re-run a failing sequence with {@code -Dfuzz.seed=...}.
+ * - Extra logs with {@code -Dfuzz.logSeed=true} and {@code -Dfuzz.verboseWeights=true}.
+ *
+ * @author Al-Bara Al-Sakkaf
  */
 public class FuzzTest {
     /**
@@ -30,6 +41,10 @@ public class FuzzTest {
         runFuzzer(1);
     }
 
+    /**
+     * Fuzz Level 2 within the configured duration.
+     * Same behavior and controls as {@link #testLevel1()}, but starts at Level 2.
+     */
     @Test
     @Timeout(60)
     public void testLevel2() {
@@ -37,6 +52,16 @@ public class FuzzTest {
         runFuzzer(2);
     }
 
+    /**
+     * Runs the core fuzzing loop for the given starting level.
+     * The loop mixes movement inputs with occasional meta actions (pause/resume/save)
+     * and optional level loads. It adapts movement choices based on recent success/failure
+     * and uses a "shake" phase to escape stagnation. Exceptions related to background audio
+     * initialization are suppressed to keep the run going; other runtime exceptions are dumped
+     * with a reproduction artifact and rethrown.
+     *
+     * @param initialLevel starting level number (e.g., 1 or 2)
+     */
     private void runFuzzer(int initialLevel) {
         // Duration for this run (centralised in RUN_MS constant above)
         long durationMillis = RUN_MS;
@@ -45,7 +70,9 @@ public class FuzzTest {
         boolean logSeed = Boolean.getBoolean("fuzz.logSeed");
         boolean slowMode = Boolean.getBoolean("fuzz.slow");
         boolean crossLevels = Boolean.getBoolean("fuzz.crossLevels");
-        boolean enablePause = Boolean.parseBoolean(System.getProperty("fuzz.enablePause","false"));
+    boolean enablePause = Boolean.parseBoolean(System.getProperty("fuzz.enablePause","false"));
+    boolean allowSave = Boolean.parseBoolean(System.getProperty("fuzz.allowSave", "false"));
+    boolean allowResume = Boolean.parseBoolean(System.getProperty("fuzz.allowResume", "false"));
 
         if (logSeed) {
             System.out.println("[FUZZ] seed=" + seed + " ms=" + durationMillis +
@@ -63,14 +90,19 @@ public class FuzzTest {
         }
 
         List<Input> movement = List.of(Input.MOVE_UP, Input.MOVE_DOWN, Input.MOVE_LEFT, Input.MOVE_RIGHT);
-        List<Input> meta = enablePause
-                ? List.of(Input.RESUME, Input.CONTINUE, Input.PAUSE, Input.SAVE)
-                : List.of(Input.RESUME, Input.CONTINUE, Input.SAVE);
+        List<Input> meta = new ArrayList<>();
+        // Never include RESUME by default to avoid GUI load dialog; allow opt-in via fuzz.allowResume=true
+        meta.add(Input.CONTINUE);
+        if (allowResume) meta.add(Input.RESUME);
+        if (enablePause) meta.add(Input.PAUSE);
+        if (allowSave) meta.add(Input.SAVE);
         List<Input> levelLoads = crossLevels
                 ? List.of(Input.LOAD_LEVEL_1, Input.LOAD_LEVEL_2)
                 : Collections.emptyList();
-        boolean allowExit = Boolean.getBoolean("fuzz.allowExit");
-        List<Input> rare = allowExit ? List.of(Input.SAVE, Input.EXIT) : List.of(Input.SAVE);
+    boolean allowExit = Boolean.getBoolean("fuzz.allowExit");
+    List<Input> rare = allowExit
+        ? (allowSave ? List.of(Input.EXIT, Input.SAVE) : List.of(Input.EXIT))
+        : (allowSave ? List.of(Input.SAVE) : Collections.emptyList());
 
         List<Input> executed = new ArrayList<>(4096);
 
@@ -149,18 +181,20 @@ public class FuzzTest {
 
                 Input next;
                 if (!isPlay) {
-                    next = rnd.nextBoolean() ? Input.RESUME : Input.CONTINUE;
+                    // Avoid RESUME to prevent triggering load dialog; use CONTINUE to return to Play
+                    next = Input.CONTINUE;
                 } else if (pausedRecently) {
                     if (enablePause && rnd.nextInt(100) < 25) {
-                        next = rnd.nextBoolean() ? Input.RESUME : Input.CONTINUE;
-                    } else {
-                        pausedRecently = false;
-                        next = pickAction(rnd, movement, meta, levelLoads, rare,
-                                success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
+                        // Avoid RESUME when recovering from pause; prefer CONTINUE only
+                        next = Input.CONTINUE;
+            } else {
+                pausedRecently = false;
+                next = pickAction(controller, rnd, movement, meta, levelLoads, rare,
+                    success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
                     }
                 } else {
-                    next = pickAction(rnd, movement, meta, levelLoads, rare,
-                            success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
+            next = pickAction(controller, rnd, movement, meta, levelLoads, rare,
+                success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
                 }
 
                 executed.add(next);
@@ -258,6 +292,15 @@ public class FuzzTest {
         }
     }
 
+    /**
+     * Helper method used by the fuzzer incase of audio issues.
+     * Attempts to start a new game for the specified level, retrying a few times if
+     * an audio initialization failure occurs. Non-audio exceptions are rethrown.
+     *
+     * @param controller the application controller
+     * @param level      the level to start (1 or 2)
+     * @return {@code true} if the controller transitions to a Play state; otherwise {@code false}
+     */
     private boolean safeStartNewGame(AppController controller, int level) {
         for (int attempt = 1; attempt <= 3; attempt++) {
             try {
@@ -277,12 +320,22 @@ public class FuzzTest {
         return controller.state().getClass().getSimpleName().contains("Play");
     }
 
+    /**
+     * Used incase game Pauses for too long and cannot resume.
+     * If the game is currently in a paused state, attempts to resume back into Play.
+     * Falls back to starting a new game if resume attempts do not succeed.
+     *
+     * @param controller the application controller
+     * @param level      the level to start if resume fails
+     * @param rnd        source of randomness for minor delays/choices
+     * @return whether the game ends up in a Play state
+     */
     private boolean forcePlayIfPaused(AppController controller, int level, Random rnd) {
         String stateName = controller.state().getClass().getSimpleName();
         if (!stateName.contains("Paused")) return true;
         for (int attempt = 0; attempt < 4; attempt++) {
             try {
-                controller.handleInput(Input.RESUME);
+                // Avoid RESUME entirely to prevent GUI load dialog in tests
                 controller.handleInput(Input.CONTINUE);
                 controller.handleInput(Input.MOVE_UP);
             } catch (Exception ignored) {}
@@ -299,7 +352,25 @@ public class FuzzTest {
         return controller.state().getClass().getSimpleName().contains("Play");
     }
 
-    private Input pickAction(Random rnd,
+    /**
+     * Chooses the next input to send to the controller, balancing between movement,
+     * meta (pause/resume/save), and optional level-load actions.
+     *
+     * @param rnd random source
+     * @param movement movement inputs (up/down/left/right)
+     * @param meta meta inputs (resume/continue/pause/save)
+     * @param levelLoads optional level-load inputs
+     * @param rare rare actions (e.g., save/exit)
+     * @param success success counters by movement
+     * @param fail failure counters by movement
+     * @param lastSuccessfulDir last successful movement direction
+     * @param stagnationCounter how long movement has been ineffective
+     * @param inShake whether the fuzzer is in a shake phase
+     * @param crossLevels whether level load actions are allowed
+     * @return chosen input
+     */
+    private Input pickAction(AppController controller,
+                             Random rnd,
                              List<Input> movement,
                              List<Input> meta,
                              List<Input> levelLoads,
@@ -318,17 +389,38 @@ public class FuzzTest {
         } else if (rnd.nextInt(100) < 5 && !rare.isEmpty()) {
             return rare.get(rnd.nextInt(rare.size()));
         } else {
-            return pickMovementHeuristic(rnd, movement, success, fail, lastSuccessfulDir, stagnationCounter, inShake);
+            return pickMovementHeuristic(controller, rnd, movement, success, fail, lastSuccessfulDir, stagnationCounter, inShake);
         }
     }
 
+    /**
+     * Lightweight heuristic for when to emit a meta action instead of movement.
+     *
+     * @param rnd random source
+     * @param crossLevels whether level load actions are allowed
+     * @return true if a meta action should be emitted
+     */
     private boolean shouldDoMeta(Random rnd, boolean crossLevels) {
         int roll = rnd.nextInt(100);
         if (crossLevels) return roll < 8;
         return roll < 5;
     }
 
-    private Input pickMovementHeuristic(Random rnd,
+    /**
+     * Picks a movement input using simple bandit-style weighting of past success
+     * ratios, with additional randomness and a shake mode to escape getting stuck.
+     *
+     * @param rnd random source
+     * @param movement movement inputs
+     * @param success success counters
+     * @param fail failure counters
+     * @param lastSuccessDir last successful direction (may be null)
+     * @param stagnationCounter how long movement has been ineffective
+     * @param inShake whether the fuzzer is in a shake phase
+     * @return chosen movement input
+     */
+    private Input pickMovementHeuristic(AppController controller,
+                                        Random rnd,
                                         List<Input> movement,
                                         Map<Input,Integer> success,
                                         Map<Input,Integer> fail,
@@ -347,6 +439,27 @@ public class FuzzTest {
             double ratio = (double)s / (s+f);
             double w = 0.2 + (ratio * ratio * 2.5);
             if (stagnationCounter > 10) w *= 1.2;
+            // Bias away from hazards and toward rewards by peeking the next tile symbol
+            try {
+                String sym = peekNextSymbol(controller, mv);
+                if (sym == null) {
+                    w *= 0.3; // out of bounds/unknown
+                } else if ("~".equals(sym)) {
+                    w *= 0.10; // water is lethal
+                } else if ("M".equals(sym)) {
+                    w *= 0.20; // monster
+                } else if ("W".equals(sym)) {
+                    w *= 0.20; // wall
+                } else if ("D".equals(sym)) {
+                    w *= 0.60; // door: de-prioritize unless we happen to have key
+                } else if ("T".equals(sym) || "K".equals(sym)) {
+                    w *= 1.60; // treasure/key
+                } else if ("E".equals(sym)) {
+                    w *= 1.20; // exit is okay
+                }
+            } catch (Exception ignore) {
+                // if domain not ready, keep base w
+            }
             weights[i] = w;
             total += w;
         }
@@ -363,6 +476,27 @@ public class FuzzTest {
         return movement.get(0);
     }
 
+    /**
+     * Peek the symbol at the next cell if the given movement were applied.
+     * Returns null if outside maze bounds or if the domain/player is unavailable.
+     */
+    private String peekNextSymbol(AppController controller, Input mv) {
+        Maze m = controller.domain();
+        if (m == null || m.getPlayer() == null) return null;
+        Position p = m.getPlayer().getPos();
+        int x = p.getX();
+        int y = p.getY();
+        switch (mv) {
+            case MOVE_UP -> y -= 1;
+            case MOVE_DOWN -> y += 1;
+            case MOVE_LEFT -> x -= 1;
+            case MOVE_RIGHT -> x += 1;
+            default -> { return null; }
+        }
+        if (x < 0 || y < 0 || y >= m.getRows() || x >= m.getCols()) return null;
+        return m.getSymbol(new Position(x, y));
+    }
+
     private String weightDebug(List<Input> moves, double[] w) {
         StringBuilder sb = new StringBuilder("{");
         for (int i = 0; i < moves.size(); i++) {
@@ -374,6 +508,13 @@ public class FuzzTest {
         return sb.toString();
     }
 
+    /**
+     * Summarizes recent movement success ratios for periodic status logging.
+     *
+     * @param success success counters
+     * @param fail failure counters
+     * @return short summary string
+     */
     private String movementSuccessSummary(Map<Input,Integer> success, Map<Input,Integer> fail) {
         StringBuilder sb = new StringBuilder();
         for (Input mv : success.keySet()) {
@@ -386,6 +527,13 @@ public class FuzzTest {
         return sb.toString().trim();
     }
 
+    /**
+     * Safely retrieves the player's current {@link Position}, returning {@code null}
+     * if unavailable or if any error occurs.
+     *
+     * @param c the application controller
+     * @return player's position or {@code null}
+     */
     private Position currentPlayerPos(AppController c) {
         try {
             Maze m = c.domain();
@@ -393,6 +541,12 @@ public class FuzzTest {
         } catch (Exception ignored) { return null; }
     }
 
+    /**
+     * Counts treasures using {@link #countTreasures(Maze)} while guarding against nulls/errors.
+     *
+     * @param controller the application controller
+     * @return treasure count or 0 on error
+     */
     private int safeCountTreasures(AppController controller) {
         try {
             Maze m = controller.domain();
@@ -401,6 +555,12 @@ public class FuzzTest {
         } catch (Exception e) { return 0; }
     }
 
+    /**
+     * Counts keys using {@link #countKeys(Maze)} while guarding against nulls/errors.
+     *
+     * @param controller the application controller
+     * @return key count or 0 on error
+     */
     private int safeCountKeys(AppController controller) {
         try {
             Maze m = controller.domain();
@@ -409,6 +569,12 @@ public class FuzzTest {
         } catch (Exception e) { return 0; }
     }
 
+    /**
+     * Counts treasure tiles in the given maze by scanning symbols.
+     *
+     * @param maze maze to scan
+     * @return number of treasures
+     */
     private int countTreasures(Maze maze) {
         int rows = maze.getRows(), cols = maze.getCols(), count = 0;
         for (int r=0;r<rows;r++) for (int c=0;c<cols;c++)
@@ -416,6 +582,12 @@ public class FuzzTest {
         return count;
     }
 
+    /**
+     * Counts key tiles in the given maze by scanning symbols (both upper/lower case).
+     *
+     * @param maze maze to scan
+     * @return number of keys
+     */
     private int countKeys(Maze maze) {
         int rows = maze.getRows(), cols = maze.getCols(), count = 0;
         for (int r=0;r<rows;r++) for (int c=0;c<cols;c++) {
@@ -425,6 +597,14 @@ public class FuzzTest {
         return count;
     }
 
+    /**
+     * Prints a minimal reproduction bundle for the executed inputs and optionally writes
+     * a Markdown issue artifact if {@code -Dfuzz.issue.markdown=true} is set.
+     *
+     * @param seed random seed used
+     * @param executed sequence of executed inputs
+     * @param t failure that occurred (nullable)
+     */
     private void dumpSequence(long seed, List<Input> executed, Throwable t) {
         System.out.println("===== FUZZ SEQUENCE DUMP =====");
         System.out.println("Seed: " + seed + " length=" + executed.size());
@@ -439,6 +619,15 @@ public class FuzzTest {
         }
     }
 
+    /**
+     * Emits a Markdown report under {@code target/fuzz-issues/} containing the seed, stack trace,
+     * platform info, and the executed input sequence in CSV form.
+     *
+     * @param seed random seed used
+     * @param executed sequence of executed inputs
+     * @param t failure that occurred (nullable)
+     * @param csv CSV representation of {@code executed}
+     */
     private void writeIssueMarkdown(long seed, List<Input> executed, Throwable t, String csv) {
         java.io.File dir = new java.io.File("target/fuzz-issues");
         if (!dir.exists() && !dir.mkdirs()) {
@@ -492,6 +681,11 @@ public class FuzzTest {
         System.out.println("[FUZZ][ISSUE] Markdown written: " + f.getPath());
     }
 
+    /**
+     * Best-effort retrieval of the current commit hash from {@code .git/HEAD}.
+     *
+     * @return the commit hash, or "unknown" if it cannot be determined
+     */
     private String readGitHead() {
         try {
             java.nio.file.Path head = java.nio.file.Paths.get(".git/HEAD");
@@ -507,6 +701,13 @@ public class FuzzTest {
         } catch (Exception e) { return "unknown"; }
     }
 
+    /**
+     * Replays a comma-separated sequence of {@link Input} values starting from a given level.
+     * Intended for local debugging of a previously dumped failing run.
+     *
+     * @param csv comma-separated {@link Input} values
+     * @param startLevel level to start from
+     */
     @SuppressWarnings("unused")
     private void replay(String csv, int startLevel) {
         AppController controller = AppController.of();
@@ -523,6 +724,11 @@ public class FuzzTest {
         }
     }
 
+    /**
+     * Sleeps without throwing checked exceptions; preserves interrupt status.
+     *
+     * @param millis milliseconds to sleep
+     */
     private void sleepQuiet(long millis) {
         try { Thread.sleep(millis); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); }
     }
